--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,2 @@
-# watch flake directory for changes
-# this is useful for reloading when a flake-parts component changes
-watch_dir ./nyx/flake
-
-# --builders "" disables remote builders for trivial flake actions
 # e.g. in `direnv reload`
-use flake . --builders ""
+use flake .
