Update submodule reference to RoboNyx
The reference to the submodule "nyx" has been updated. The path and URL now point to "RoboNyx" repository under the same organization ("Spacebar-Cowboys"), aligning with the recent changes in the system's structure.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "nyx"]
-	path = nyx
-	url = https://github.com/Spacebar-Cowboys/nyx.git
+[submodule "RoboNyx"]
+	path = RoboNyx
+	url = https://github.com/Spacebar-Cowboys/RoboNyx.git
 	branch = master
