Update submodule name and path
The submodule "RoboNyx" has been renamed to "robo-nyx" and its path has been updated accordingly. Also, the branch specifier has been removed, which implies the submodule will track the HEAD of the default branch at the remote.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "RoboNyx"]
-	path = RoboNyx
+[submodule "robo-nyx"]
+	path = robo-nyx
 	url = https://github.com/Spacebar-Cowboys/RoboNyx.git
-	branch = master
